@@ -22,7 +22,7 @@
 //
 
 //
-// $Id: G4VDiscreteProcess.hh,v 1.5 2001-07-11 10:08:18 gunter Exp $
+// $Id: G4VDiscreteProcess.hh,v 1.6 2002-04-15 04:29:57 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -40,12 +40,10 @@
 // ------------------------------------------------------------
 //   New Physics scheme           18 Dec. 1996  H.Kurahige
 // ------------------------------------------------------------
-//   modified                     25 Feb. 1997  H.Kurahige
-//   modified                     8  Mar. 1997  H.Kurahige
-//   modified                     26 Mar. 1997  H.Kurahige
-//   modified                     16 Apr. 1997  L.Urban    
-//   modified                     17 Dec. 1997  L.Urban    
 //   modified for new ParticleChange 12 Mar. 1998  H.Kurashige
+//   Fixed a bug in PostStepGetPhysicalInteractionLength  
+//                                15 Apr. 2002 H.Kurashige 
+//
 
 #ifndef G4VDiscreteProcess_h
 #define G4VDiscreteProcess_h 1
@@ -160,7 +158,12 @@ inline G4double G4VDiscreteProcess::PostStepGetPhysicalInteractionLength(
 #endif
 
 
-  G4double value = theNumberOfInteractionLengthLeft * currentInteractionLength;
+  G4double value;
+  if (currentInteractionLength <DBL_MAX) {
+    value = theNumberOfInteractionLengthLeft * currentInteractionLength;
+  } else {
+    value = DBL_MAX;
+  }
 #ifdef G4VERBOSE
   if (verboseLevel>1){
     G4cout << "G4VDiscreteProcess::PostStepGetPhysicalInteractionLength ";
