@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4VRestDiscreteProcess.hh,v 1.5 2001-07-11 10:08:18 gunter Exp $
+// $Id: G4VRestDiscreteProcess.hh,v 1.6 2002-04-15 04:29:57 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -36,11 +36,10 @@
 // ------------------------------------------------------------
 //   New Physics scheme           8  Mar. 1997  H.Kurahige
 // ------------------------------------------------------------
-//   modified                     26  Mar. 1997  H.Kurahige
-//   modified                     16  Apr. 1997  L.Urban     
-//   modified                     16  Dec. 1997  L.Urban     
 //   modified for new ParticleChange 12 Mar. 1998  H.Kurashige
-
+//   Fixed a bug in PostStepGetPhysicalInteractionLength  
+//                                15 Apr. 2002 H.Kurashige 
+//
 
 #ifndef G4VRestDiscreteProcess_h
 #define G4VRestDiscreteProcess_h 1
@@ -164,7 +163,12 @@ inline
   }
 #endif
 
-  G4double value = theNumberOfInteractionLengthLeft * currentInteractionLength;
+  G4double value;
+  if (currentInteractionLength <DBL_MAX) {
+    value = theNumberOfInteractionLengthLeft * currentInteractionLength;
+  } else {
+    value = DBL_MAX;
+  }
 #ifdef G4VERBOSE
    if (verboseLevel>1){
     G4cout << "G4VRestDiscreteProcess::PostStepGetPhysicalInteractionLength ";
