@@ -1,4 +1,4 @@
-$Id: History,v 1.24 2001-12-13 13:01:21 kurasige Exp $
+$Id: History,v 1.25 2002-04-15 04:29:53 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,8 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-- 13 Dec. 2001
+procman-V03-02-03
+- Apr.15, 2002   H.Kurashige (procman-V04-00-00)
 - Add G4VProcess::GetCurrentInteractionLength()
+- Fixed bugs in PostStepDoIt when MeanFreePath is equal to DBL_MAX
  
 - Oct. 11, 2001  G.Cosmo (procman-V03-02-04)
 - Replaced inclusion of ctoken.h with G4Tokenizer.hh in
